[package]
name = "embassy-esp32"
version = "0.1.0"
authors = ["Atanas Pavlov <nasko.js@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = {version = "0.5.0", features = ["task-arena-size-40960"]}
embassy-time = "0.3.1"
esp-backtrace = { version = "0.13.0", features = [ "esp32c3", "println" ] }
esp-hal = { version = "0.19.0", features = ["embassy-futures", "embassy-sync", "embedded-hal-async", "embedded-io", "embedded-io-async", "esp32c3"] }
esp-hal-embassy = { version = "0.2.0", features = ["esp32c3", "integrated-timers", "log"] }
esp-hal-procmacros = {version = "0.12.0", features = ["embassy"]}
esp-println = { version = "0.10.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
static_cell = "2.1.0"
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
